<resources>
    <string name="app_name">Grocery Delivery</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_bn_label">Login</string>
    <string name="sign_up_text">New User? Register Now</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="reg_bn_label">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
